# agent-pipeline

./: .gitignore  CLAUDE.md  README.md  README.zh.md  pyproject.toml  requirements.txt
.claude/: settings.json
briefs/: builder→tester.md  designer→builder--phase2.md  designer→builder.md  scout→designer.md
builder/: CLAUDE.md  cli-reference.md
designer/: CLAUDE.md  architecture.md  interaction.md  phase2-plan.md  phase3-design.md  requirements.md
src/agent_pipeline/: __init__.py  knowledge.py  log_handler.py  models.py  orchestrator.py  state.py
src/agent_pipeline/agents/: __init__.py  builder.py  designer.py  scout.py  seller.py  tester.py
src/agent_pipeline/cli/: main.py
src/agent_pipeline/web/: __init__.py  server.py
src/agent_pipeline/web/static/: app.js  index.html  styles.css
src/tests/: test_cli.py
tester/: CLAUDE.md  fix-prompt.md  test-plan.md
