[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-pipeline"
version = "0.2.0"
description = "多 Agent 开发流水线 — Phase 2: LangGraph StateGraph 五 Agent 全流水线"
authors = [
    {name = "JIANGXIA", email = "jiangiabadadao@example.com"},
]
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
agent-pipeline = "agent_pipeline.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.md"]
